Wrap toolbar if there is no other way to show all buttons. Fix mobile style for BIM splitted page

--- a/app/assets/stylesheets/layout/_toolbar_mobile.sass
+++ b/app/assets/stylesheets/layout/_toolbar_mobile.sass
@@ -31,9 +31,6 @@
     .toolbar-container
       margin-top: 10px
 
-      .toolbar
-        flex-wrap: nowrap
-
       .title-container:not(editable-toolbar-title)
         margin-right: 10px
 
